add swagger docs for endpoint stats
