# docs/swagger.json
@@ -501,6 +501,35 @@
                     }
                 }
             }
+        },
+        "/stats": {
+            "get": {
+                "description": "Get the count of how many times each endpoint is called",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Endpoint Stats"
+                ],
+                "summary": "Retrieve Endpoint Stats",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.EndpointStatsResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.EndpointStatsErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -601,6 +630,29 @@
                 "message": {
                     "type": "string",
                     "example": "Pond deleted successfully"
+                }
+            }
+        },
+        "dto.EndpointStatsErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "no endpoints tracked"
+                }
+            }
+        },
+        "dto.EndpointStatsResponse": {
+            "type": "object",
+            "additionalProperties": {
+                "type": "object",
+                "properties": {
+                    "count": {
+                        "type": "integer"
+                    },
+                    "unique_user_agents": {
+                        "type": "integer"
+                    }
                 }
             }
         },
