# dto/endpoint_stats_dto.go
@@ -8,3 +8,12 @@ type EndpointStats struct {
     UserAgent   string    `json:"user_agent"`
     RequestTime time.Time `json:"request_time"`
 }
+
+type EndpointStatsResponse map[string]struct {
+    Count             int `json:"count"`
+    UniqueUserAgents  int `json:"unique_user_agents"`
+}
+
+type EndpointStatsErrorResponse struct {
+    Error string `json:"error" example:"no endpoints tracked"`
+}
